MVNCrawler/maven/jars/mattermost-4.0.39/META-INF/fabric8/openshift/mattermost-deploymentconfig.yml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 0bb55c4c468633ad656628c91d78003656e92862
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=mattermost&var-version=4.0.39
    fabric8.io/scm-con-url: scm:git:git@github.com:fabric8io/fabric8-platform.git/apps/mattermost
    fabric8.io/scm-url: http://github.com/fabric8io/fabric8-platform/apps/mattermost
    fabric8.io/git-branch: release-v4.0.39
    fabric8.io/scm-devcon-url: scm:git:git@github.com:fabric8io/fabric8-platform.git/apps/mattermost
    fabric8.io/scm-tag: app-console-2.0.1
  labels:
    provider: fabric8
    project: mattermost
    version: 4.0.39
    group: io.fabric8.platform.apps
  name: mattermost
spec:
  replicas: 1
  selector:
    project: mattermost
    provider: fabric8
    group: io.fabric8.platform.apps
  strategy:
    rollingParams:
      timeoutSeconds: 7200
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 0bb55c4c468633ad656628c91d78003656e92862
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=mattermost&var-version=4.0.39
        fabric8.io/scm-con-url: scm:git:git@github.com:fabric8io/fabric8-platform.git/apps/mattermost
        fabric8.io/scm-url: http://github.com/fabric8io/fabric8-platform/apps/mattermost
        fabric8.io/git-branch: release-v4.0.39
        fabric8.io/scm-devcon-url: scm:git:git@github.com:fabric8io/fabric8-platform.git/apps/mattermost
        fabric8.io/scm-tag: app-console-2.0.1
      labels:
        app: mattermost
        tier: app
        provider: fabric8
        project: mattermost
        version: 4.0.39
        group: io.fabric8.platform.apps
      name: mattermost-app
    spec:
      containers:
      - env:
        - name: MM_SQLSETTINGS_DATASOURCE
          valueFrom:
            secretKeyRef:
              key: mm-datasource
              name: mattermost
        image: fabric8/mattermost:vbc557c5
        livenessProbe:
          httpGet:
            path: /
            port: 8065
          initialDelaySeconds: 60
          timeoutSeconds: 10
        name: mattermost-app
        readinessProbe:
          httpGet:
            path: /
            port: 8065
          initialDelaySeconds: 10
          timeoutSeconds: 10
        volumeMounts:
        - mountPath: /mattermost/data/
          name: mattermost-data
          readOnly: true
        - mountPath: /mattermost/config/
          name: mattermost-config
      volumes:
      - name: mattermost-data
        persistentVolumeClaim:
          claimName: mattermost-data
      - configMap:
          items:
          - key: config.json
            path: config.json
          name: mattermost
        name: mattermost-config
  triggers:
  - type: ConfigChange
