MVNCrawler/maven/jars/mattermost-4.0.39/META-INF/fabric8/openshift/mattermost-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    provider: fabric8
    project: mattermost
    version: 4.0.39
    group: io.fabric8.platform.apps
  name: mattermost
spec:
  to:
    kind: Service
    name: mattermost
